pg-typed/tests/compile_fail/mixed_positional_named.rs
// Should fail: cannot mix positional and named parameters.
fn main() {
    let _ = pg_typed::query!("SELECT $1::int4, :name::text", 1i32, name = "hello");
}
